--- a/template/HROOT/CHANGES
+++ b/template/HROOT/CHANGES
@@ -34,3 +34,6 @@
 0.7.1 : 12 Nov 2011 
    * support for static methods
    * add TROOT
+
+0.8 : 17 Jun 2014
+   * separate packages into HROOT-core, HROOT-hist, HROOT-io, HROOT-math, HROOT-graf and HROOT is now an umbrella package
