--- a/HROOT-generate/template/CHANGES
+++ b/HROOT-generate/template/CHANGES
@@ -1,39 +1,60 @@
-0.5.0: 31 Jul 2011
-   * initial preview release
+# Changelog for HROOT
 
-0.5.1: 3 Aug 2011
-   * support for delete 
+## 0.10.0.1
+- Use hackage-version of fficxx (#18)
+- Generate docs in CI (#17)
+- Update flake.nix with recent fficxx and ormolu format (#16)
+- Update fficxx to support GHC 9.4 (#15)
+- Add TMutex and test multithreading with GUI (#12)
+- HROOT now uses common stdcxx (#11)
+- idealized gas simulation (#10)
+- Add TMarker and Range. Test 2D graphics using gas example (#9)
+- HROOT generation and packing via nix (#8)
+- Revive umbrella package generation (#7)
+- Static files (Config.hs, Setup.lhs) and custom-setup dependency (#6)
+- Modernize HROOT with fficxx 0.5.1 (#5)
 
-0.6: 16 Aug 2011
-   * implement Deletable. delete method for every object
-   * refactor HROOT generated file names (Interface.hs, Implementation.hs, FFI.hs) 
+## 0.9.0.1
 
-0.6.3: 22 Sep 2011 
-   * Implement Existential Types 
+## 0.9
+- HROOT-tree
+- HROOT only support ROOT > 6
 
-0.6.4: 28 Sep 2011 
-   * add many TH2 class methods
+## 0.8
+- separate packages into HROOT-core, HROOT-hist, HROOT-io, HROOT-math, HROOT-graf and HROOT is now an umbrella package
 
-0.6.6: 7 Oct 2011 
-   * do not need OverlappingInstances, IncoherentInstances, UndecidableInstances 
+## 0.7
+- separate all class interfaces and implementation in different modules
+- overhaul Existential
 
+## 0.7.1
+- support for static methods
+- add TROOT
 
-0.6.7: 18 Oct 2011
-   * implement almost all TH1 class methods
+## 0.6.9
+- implement almost all class methods of TLine, TAttLine, TAttMarker, TAttText and TAttPad
 
-0.6.8: 20 Oct 2011
-   * implement almost all class methods of TH2, TH3, TFormula, TF1 and TGraph
+## 0.6.8
+- implement almost all class methods of TH2, TH3, TFormula, TF1 and TGraph
 
-0.6.9: 20 Oct 2011 
-   * implement almost all class methods of TLine, TAttLine, TAttMarker, TAttText and TAttPad
+## 0.6.7
+- implement almost all TH1 class methods
 
-0.7 : 8 Nov 2011
-   * separate all class interfaces and implementation in different modules
-   * overhaul Existential 
+## 0.6.6
+- do not need OverlappingInstances, IncoherentInstances, UndecidableInstances
 
-0.7.1 : 12 Nov 2011 
-   * support for static methods
-   * add TROOT
+## 0.6.4
+- add many TH2 class methods
 
-0.8 : 17 Jun 2014
-   * separate packages into HROOT-core, HROOT-hist, HROOT-io, HROOT-math, HROOT-graf and HROOT is now an umbrella package
+## 0.6.3
+- Implement Existential Types
+
+## 0.6
+- implement Deletable. delete method for every object
+- refactor HROOT generated file names (Interface.hs, Implementation.hs, FFI.hs)
+
+## 0.5.1
+- support for delete
+
+## 0.5.0
+- initial preview release
